<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">coveapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">833134460175-3gd4vfrickqpsics1n5edkj1e5o2pohb.apps.googleusercontent.com</string>
    <string name="title_activity_organizer">OrganizerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="expo_event">international event</string>
    <string name="edit_profile">edit_profile</string>
    <string name="profile_photo">profile_photo</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="details_of_the_user">user</string>
    <string name="phone">phone</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="update">Update</string>
    <string name="First_name">Frist_name</string>
    <string name="Last_name">Last_name</string>
    <string name="Last_Name">Last_Name</string>
    <string name="First_Name">Frist_Name</string>
    <string name="Details_of_the_User">Details_of_the_User</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instragram</string>
    <string name="Update">Update</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>